fixing update and adding delete automovel doc
